@@ -31,11 +31,8 @@ import static utils.Utils.*;
 @RuleTestData("login-rule")
 public class LoginRuleDataFactory {
 
-    private static final ClientHelper loginRuleTest1Client = getRandomVantageClientAllFields();
     private static final ClientHelper loginRuleTest2Client = getRandomVantageClientAllFields();
     private static final ClientHelper loginRuleTest3Client = getRandomClientByBrandAndCountry(Brand.VT, Country.getCountryNameByCodeUppercase("CN"));
-    private static final ClientHelper loginRuleTest4Client = getRandomClientByBrandAndCountry(Brand.VT, Country.getCountryNameByCodeUppercase("CN"));
-    private static final ClientHelper loginRuleTest5Client = getRandomClientByBrandAndCountry(Brand.VT, Country.getCountryNameByCodeUppercase("CN"));
     private static final ClientHelper loginRuleTest6Client = getRandomClientByBrandAndCountry(Brand.VT, Country.getCountryNameByCodeUppercase("CN"));
     private static final ClientHelper loginRuleTest7Client = getRandomClientByBrandAndCountry(Brand.VT, Country.getCountryNameByCodeUppercase("CN"));
     private static final ClientHelper loginRuleTest8Client = getRandomClientByBrandAndCountry(Brand.VT, Country.getCountryNameByCodeUppercase("CN"));
@@ -44,8 +41,9 @@ public class LoginRuleDataFactory {
     private static final ClientHelper loginRuleTest11Client = getRandomClientByBrandAndCountry(Brand.VT, Country.getCountryNameByCodeUppercase("CN"));
     private static final ClientHelper loginRuleTest12Client = getRandomClientByBrandAndCountry(Brand.VT, Country.getCountryNameByCodeUppercase("CN"));
     private static final ClientHelper loginRuleTest13Client = getRandomClientByBrandAndCountry(Brand.VT, Country.getCountryNameByCodeUppercase("CN"));
-    private static final ClientHelper loginRuleTest14Client = getRandomClientByBrandAndCountry(Brand.VT, Country.getCountryNameByCodeUppercase("CN"));
     private static final ClientHelper loginRuleTest15Client = getRandomClientByBrandAndCountry(Brand.VT, Country.getCountryNameByCodeUppercase("CN"));
+    private static final ClientHelper loginRuleTest16Client = getRandomClientByBrandAndCountry(Brand.VT, Country.getCountryNameByCodeUppercase("CN"));
+    private static final ClientHelper loginRuleTest17Client = getRandomClientByBrandAndCountry(Brand.VT, Country.getCountryNameByCodeUppercase("CN"));
 
     @Step("Create base test data for Login rule")
     private static DataHelper getLoginRuleData(ClientHelper client) {
@@ -56,13 +54,6 @@ public class LoginRuleDataFactory {
         data.lnSessionParsedObject = generateLexisNexisDataByClient(data.clientHelper);
 
         data.loginEvent = new LoginEvent(client.getBrand(), client.getUserId(), convertTimestampToIsoFormat(getCurrentTimestampMillis()), getRandomUuidString(), client.getIpAddress(), client.getUserId().toString(), "webAccount", client.getRegulator(), "1.0", CRM_LOGIN_EVENT);
-        return data;
-    }
-
-
-    @Step("Login rule. Connection search sub-process. Exit without alert if user has no connections. end_connections_not_found")
-    private static DataHelper getLoginRuleTest1Data() {
-        DataHelper data = getLoginRuleData(loginRuleTest1Client);
         return data;
     }
 
@@ -100,54 +91,6 @@ public class LoginRuleDataFactory {
         data.clientFraudTypes.add(createClientFraudTypeCh(connectedClient.getUcid(), FraudTypeOld.CPA_ABUSE.getKey()));
         addConnectionByEmailPhoneAttribute(data, connectedClient, 0.76);
         //
-        return data;
-    }
-
-    @Description("Login rule. Connection search sub-process. No toxic connections for VT or PU users. Event.id end_cs_no_toxic")
-    private static DataHelper getLoginRuleTest4Data() throws IOException {
-        DataHelper data = getLoginRuleData(loginRuleTest4Client);
-        //Add connection
-        ClientHelper connectedClient = getRandomClientByBrandAndCountry(Brand.VT, Country.getCountryNameByCodeUppercase("CN"));
-        connectedClient.setEmail(data.clientHelper.getEmail());
-        connectedClient.setPhoneNumber(data.clientHelper.getPhoneNumber());
-
-        data.connectedUsers = new ArrayList<>();
-        data.connectedClientHelpers = new ArrayList<>();
-
-        data.connectedUsers.add(generateUserByClient(connectedClient));
-        data.connectedClientHelpers.add(connectedClient);
-
-        data.clientFraudTypes = new ArrayList<>();
-        data.clientFraudTypes.add(createClientFraudTypeCh(connectedClient.getUcid(), FraudTypeOld.CPA_ABUSE.getKey()));
-
-        addConnectionByEmailPhoneAttribute(data, connectedClient, 0.86);
-
-        return data;
-    }
-
-    @Description("Login rule. Connection search sub-process. Exists toxic connections for VT or PU users, general score<0.7. Event.id Event_0qy8dcr")
-    private static DataHelper getLoginRuleTest5Data() throws IOException, InterruptedException {
-        DataHelper data = getLoginRuleData(loginRuleTest5Client);
-        //Add connection
-        ClientHelper connectedClient = getRandomClientByBrandAndCountry(Brand.VT, Country.getCountryNameByCodeUppercase("CN"));
-        connectedClient.setEmail(data.clientHelper.getEmail());
-        connectedClient.setPhoneNumber(data.clientHelper.getPhoneNumber());
-
-        data.connectedUsers = new ArrayList<>();
-        data.connectedClientHelpers = new ArrayList<>();
-
-        data.connectedUsers.add(generateUserByClient(connectedClient));
-        data.connectedClientHelpers.add(connectedClient);
-
-        data.clientFraudTypes = new ArrayList<>();
-        data.clientFraudTypes.add(createClientFraudTypeCh(connectedClient.getUcid(), FraudTypeOld.CPA_ABUSE.getKey()));
-
-        addConnectionByEmailPhoneAttribute(data, connectedClient, 0.86);
-
-        //add abuse
-        insertObjectToDb(CRM_USER_TABLE_NAME, data.connectedUsers.getFirst());
-        addFraudsForClient(data.connectedClientHelpers.getFirst(), List.of(HEDGING), FraudTypeStatus.CONFIRMED);
-
         return data;
     }
 
@@ -231,12 +174,11 @@ public class LoginRuleDataFactory {
     private static DataHelper getLoginRuleTest9Data() throws IOException, InterruptedException {
         DataHelper data = getLoginRuleData(loginRuleTest9Client);
 
-        //Add connection with abuse type equal to unknown
         ClientHelper connectedClient = getRandomClientByBrandAndCountry(Brand.VT, Country.getCountryNameByCodeUppercase("CN"));
         addConnectionByEmailPhoneAttribute(data, connectedClient, 0.86);
         //add abuse
-        insertObjectToDb(CRM_USER_TABLE_NAME, data.connectedUsers.get(0));
-        addFraudsForClient(data.connectedClientHelpers.get(0), List.of(MONEY_LAUNDRY), FraudTypeStatus.CONFIRMED);
+        insertObjectToDb(CRM_USER_TABLE_NAME, data.connectedUsers.getFirst());
+        addFraudsForClient(data.connectedClientHelpers.getFirst(), List.of(MONEY_LAUNDRY), FraudTypeStatus.CONFIRMED);
 
         // set model score
         data.ucidGeneralScore = generateUcidGeneralScoreObject(data.clientHelper, 0.71, 0.71);
@@ -315,8 +257,8 @@ public class LoginRuleDataFactory {
         ClientHelper connectedClient = getRandomClientByBrandAndCountry(Brand.VT, Country.getCountryNameByCodeUppercase("CN"));
         addConnectionByEmailPhoneAttribute(data, connectedClient, 0.86);
         //add abuse
-        insertObjectToDb(CRM_USER_TABLE_NAME, data.connectedUsers.get(0));
-        addFraudsForClient(data.connectedClientHelpers.get(0), List.of(HEDGING), FraudTypeStatus.CONFIRMED);
+        insertObjectToDb(CRM_USER_TABLE_NAME, data.connectedUsers.getFirst());
+        addFraudsForClient(data.connectedClientHelpers.getFirst(), List.of(HEDGING), FraudTypeStatus.CONFIRMED);
 
         //Add second connection with abuse type no equal to hedging
         ClientHelper connectedClient2 = getRandomClientByBrandAndCountry(Brand.VT, Country.getCountryNameByCodeUppercase("CN"));
@@ -328,13 +270,54 @@ public class LoginRuleDataFactory {
         // set model score
         data.ucidGeneralScore = generateUcidGeneralScoreObject(data.clientHelper, 0.71, 0.71);
 
+        return data;
+    }
+
+    @Description("Login rule. Connection search sub-process. Exit if general score < 0.7. ElementId: end_gs_low")
+    private static DataHelper getLoginRuleTest16Data() throws IOException, InterruptedException {
+        DataHelper data = getLoginRuleData(loginRuleTest16Client);
+
+        //Add connection with abuse type equal to hedging
+        ClientHelper connectedClient = getRandomClientByBrandAndCountry(Brand.VT, Country.getCountryNameByCodeUppercase("CN"));
+        addConnectionByEmailPhoneAttribute(data, connectedClient, 0.86);
+        //add abuse
+        insertObjectToDb(CRM_USER_TABLE_NAME, data.connectedUsers.getFirst());
+        addFraudsForClient(data.connectedClientHelpers.getFirst(), List.of(HEDGING), FraudTypeStatus.CONFIRMED);
+
+        //Add second connection with abuse type no equal to hedging
+        ClientHelper connectedClient2 = getRandomClientByBrandAndCountry(Brand.VT, Country.getCountryNameByCodeUppercase("CN"));
+        addConnectionByEmailPhoneAttribute(data, connectedClient2, 1d);
+        //add abuse
+        insertObjectToDb(CRM_USER_TABLE_NAME, data.connectedUsers.get(1));
+        addFraudsForClient(data.connectedClientHelpers.get(1), List.of(HEDGING), FraudTypeStatus.CONFIRMED);
+
+        // set model score
+        data.ucidGeneralScore = generateUcidGeneralScoreObject(data.clientHelper, 0.69, 0.69);
 
         return data;
     }
 
-    @Description("Login rule. Connection search sub-process. General score> 0.7, fraud type is Chargeback. Event.id end_wr_cooldown")
-    private static DataHelper getLoginRuleTest14Data() {
-        DataHelper data = getLoginRuleData(loginRuleTest14Client);
+    @Description("Login rule. Connection search sub-process. Exit if has WR that 24OP removed and current <= previous average generalScore. ElementId: Event_1fdy7w1")
+    private static DataHelper getLoginRuleTest17Data() throws IOException, InterruptedException {
+        DataHelper data = getLoginRuleData(loginRuleTest17Client);
+
+        //Add connection with abuse type equal to hedging
+        ClientHelper connectedClient = getRandomClientByBrandAndCountry(Brand.VT, Country.getCountryNameByCodeUppercase("CN"));
+        addConnectionByEmailPhoneAttribute(data, connectedClient, 0.86);
+        //add abuse
+        insertObjectToDb(CRM_USER_TABLE_NAME, data.connectedUsers.getFirst());
+        addFraudsForClient(data.connectedClientHelpers.getFirst(), List.of(HEDGING), FraudTypeStatus.CONFIRMED);
+
+        //Add second connection with abuse type no equal to hedging
+        ClientHelper connectedClient2 = getRandomClientByBrandAndCountry(Brand.VT, Country.getCountryNameByCodeUppercase("CN"));
+        addConnectionByEmailPhoneAttribute(data, connectedClient2, 1d);
+        //add abuse
+        insertObjectToDb(CRM_USER_TABLE_NAME, data.connectedUsers.get(1));
+        addFraudsForClient(data.connectedClientHelpers.get(1), List.of(HEDGING), FraudTypeStatus.CONFIRMED);
+
+        // set model score
+        data.ucidGeneralScore = generateUcidGeneralScoreObject(data.clientHelper, 0.99, 0.99);
+        data.ucidGeneralScore = generateUcidGeneralScoreObject(data.clientHelper, 0.71, 0.71);
         return data;
     }
 
@@ -342,11 +325,8 @@ public class LoginRuleDataFactory {
         startSshTunnel();
         Map<String, DataHelper> map = new HashMap<>();
         // Put all the db data for setup in a list
-        map.put("1", getLoginRuleTest1Data());
         map.put("2", getLoginRuleTest2Data());
         map.put("3", getLoginRuleTest3Data());
-        map.put("4", getLoginRuleTest4Data());
-        map.put("5", getLoginRuleTest5Data());
         map.put("6", getLoginRuleTest6Data());
         map.put("7", getLoginRuleTest7Data());
         map.put("8", getLoginRuleTest8Data());
@@ -355,8 +335,9 @@ public class LoginRuleDataFactory {
         map.put("11", getLoginRuleTest11Data());
         map.put("12", getLoginRuleTest12Data());
         map.put("13", getLoginRuleTest13Data());
-        map.put("14", getLoginRuleTest14Data());
         map.put("15", getLoginRuleTest15Data());
+        map.put("16", getLoginRuleTest16Data());
+        map.put("17", getLoginRuleTest17Data());
 
         setupData(map);
 
